# KBTinfo

./: CMakeLists.txt  KBTinfo_en_001.ts  MainWindow.cpp  MainWindow.h  MainWindow.ui  OptionsDialog.cpp  OptionsDialog.h  OptionsDialog.ui  README.md  SerialPort.cpp  SerialPort.h  SettingsNames.h  main.cpp  resources.qrc
python/: main.py
windows/: winres.rc
